# a-level-guidance-app

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/versions/: 0fab20d92393_initial_migration.py  2d2648db3223_updating_to_use_fast_api_users.py  a819ccb557c1_updating_to_use_v5_erd.py
backend/backend/: auth_backend.py  dependencies.py  main.py
backend/backend/routers/: common.py  meetings.py  quizzes.py  users.py
backend/backend/schemas/: models.py  user.py
backend/db/: models.py  seed_data.py
ci/local/: app.env
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: HomeButton.js  HomePage.js  TopAppBar.js
frontend/src/pages/: HomePage.js  LoginPage.js  ProfilePage.js  QuizPage.js  RegisterPage.js  ResultsPage.js
