[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vdeoli01 <vdeoli01@student.bbk.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.1"}
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
